fix(ui): remove scroll jumps on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-body {
+html,
+body,
+#root {
+    height: 100%;
+    width: 100%;
     margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    display: flex;
+    padding: 0 !important;
 }
